tentative fix for horizontal scrollbar in project picker

--- a/app/NovaWeb/src/styles/partials/_aggrid.scss
+++ b/app/NovaWeb/src/styles/partials/_aggrid.scss
@@ -20,7 +20,9 @@
 
       .ag-header-cell-text {
         color: $brand-secondary;
+        display: inline-block;
         font-weight: 600;
+        text-indent: 6px;
       }
     }
 
